force-app/main/default/objects/JBCXM__ScorecardFact__c/JBCXM__ScorecardFact__c.object-meta.xml
<CustomObject>
    <description>Scorecard fact table</description>
    <label>Scorecard Fact</label>
    <nameField>
        <displayFormat>Fact-{0000}</displayFormat>
        <label>Scorecard Fact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard Fact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>