force-app/main/default/objects/JBCXM__ScorecardFact__c/fields/JBCXM__CurComment__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CurComment__c</fullName>
    <label>Current Comment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>