force-app/main/default/objects/JBCXM__ScorecardFact__c/fields/JBCXM__CurScoreId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CurScoreId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Score Id</label>
    <referenceTo>JBCXM__ScoringSchemeDefinition__c</referenceTo>
    <relationshipLabel>Scorecard Fact</relationshipLabel>
    <relationshipName>CurrentScoreId</relationshipName>
    <type>Lookup</type>
</CustomField>