force-app/main/default/objects/JBCXM__ScorecardFact__c/fields/JBCXM__CurSrcVal__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CurSrcVal__c</fullName>
    <label>Current Source Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>