force-app/main/default/objects/JBCXM__ScorecardFact__c/fields/JBCXM__IsOverridden__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsOverridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOverridden</label>
    <type>Checkbox</type>
</CustomField>