force-app/main/default/objects/JBCXM__ScorecardFact__c/fields/JBCXM__LastScoreModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LastScoreModifiedDate__c</fullName>
    <label>Score Last Modified Date</label>
    <type>DateTime</type>
</CustomField>