force-app/main/default/objects/JBCXM__ScorecardFact__c/fields/JBCXM__MetricId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__MetricId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Metric Id</label>
    <referenceTo>JBCXM__ScorecardMetric__c</referenceTo>
    <relationshipLabel>Scorecard Fact (Metric Id)</relationshipLabel>
    <relationshipName>ScorecardFactMetricId</relationshipName>
    <type>Lookup</type>
</CustomField>