force-app/main/default/objects/JBCXM__ScorecardFact__c/fields/JBCXM__PrevScoreId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PrevScoreId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Score Id</label>
    <referenceTo>JBCXM__ScoringSchemeDefinition__c</referenceTo>
    <relationshipLabel>Scorecard Fact (Previous Score Id)</relationshipLabel>
    <relationshipName>PreviousScoringId</relationshipName>
    <type>Lookup</type>
</CustomField>