force-app/main/default/objects/JBCXM__ScorecardFact__c/fields/JBCXM__PrevSrcVal__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PrevSrcVal__c</fullName>
    <label>Previous Source Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>