force-app/main/default/objects/JBCXM__ScorecardFact__c/fields/JBCXM__ScoreLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ScoreLastModifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Score Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ScoreLastModifiedUser</relationshipName>
    <type>Lookup</type>
</CustomField>